qtdemux: push mode: only parse moov 1 once

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=691570